<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FirstTitle"
                android:textSize="30sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="70sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtX"
                    android:hint="@string/x"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtY"
                    android:hint="@string/y"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="10sp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MyColor"
                    android:id="@+id/btnS"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/s"
                    android:onClick="sumar"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MyColor"
                    android:id="@+id/btnR"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/r"
                    android:onClick="restar"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10sp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MyColor"
                    android:id="@+id/btnM"
                    android:onClick="multiplicar"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/m"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MyColor"
                    android:id="@+id/btnD"
                    android:textSize="20sp"
                    android:onClick="dividir"
                    android:layout_weight="1"
                    android:text="@string/d"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resultado"
                android:textSize="30sp"
                android:textStyle="bold"
                android:hint="@string/hint1"
                android:textAlignment="center"
                />

        </LinearLayout>

    </ScrollView>





</LinearLayout>